test/MapperTestLibrary1/Error/NoPartialMappingProfile.cs
// <Auto-Generated/>

#if !NO_BUILD_ERROR_CODE

using LightweightObjectMapper;

namespace MapperTestLibrary;

[MappingProfile]
internal class NoPartialMappingProfile
{
}

#endif
